--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.25.3",
     "sequelize-cli": "^6.5.1",
     "winston": "^3.8.2"
