--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.3",
     "@types/sequelize": "^4.28.14",
+    "sequelize-cli": "^6.5.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
@@ -30,8 +31,8 @@
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.25.3",
-    "sequelize-cli": "^6.5.1",
     "winston": "^3.8.2"
   }
 }
