--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.3",
     "@types/sequelize": "^4.28.14",
     "sequelize-cli": "^6.5.1",
@@ -33,7 +34,10 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-joi-validation": "^5.0.1",
+    "express-validation": "^4.1.0",
     "express-winston": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.25.3",
     "winston": "^3.8.2"
