--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-joi-validation": "^5.0.1",
+    "express-jwt": "^7.7.7",
     "express-validation": "^4.1.0",
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
